// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Role Edit Panel should allow a new role to be created 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -34,13 +34,14 @@
        </h4>
        <div
          class="rs-drawer-actions"
        >
          <button
-           aria-disabled="false"
-           class="rs-btn rs-btn-primary"
+           aria-disabled="true"
+           class="rs-btn rs-btn-primary rs-btn-disabled"
            data-testid="saveButton"
+           disabled=""
            type="submit"
          >
            create
            <span
              class="rs-ripple-pond"
@@ -84,14 +85,15 @@
          >
            <input
              aria-describedby="name-help-text"
              aria-labelledby="name-control-label"
              class="rs-input"
+             disabled=""
              id="name"
              name="name"
              type="text"
-             value=""
+             value="Brand New User Role"
            />
          </div>
        </div>
        <div
          class="rs-form-group"
@@ -109,14 +111,15 @@
          >
            <input
              aria-describedby="description-help-text"
              aria-labelledby="description-control-label"
              class="rs-input"
+             disabled=""
              id="description"
              name="userRoles.panels.description"
              type="text"
-             value=""
+             value="A user role to be added to snapshot"
            />
          </div>
        </div>
        <div
          class="rs-form-group"
@@ -128,19 +131,19 @@
            id="permissions-control-label"
          >
            userRoles.panels.permissions
          </label>
          <div
-           class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-cleanable rs-picker-block rs-picker-countable"
+           class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-cleanable rs-picker-block rs-picker-disabled rs-picker-countable"
          >
            <div
-             aria-disabled="false"
+             aria-disabled="true"
              aria-expanded="false"
              aria-haspopup="listbox"
-             class="rs-picker-toggle rs-btn rs-btn-default"
+             class="rs-picker-toggle rs-btn rs-btn-default rs-btn-disabled"
+             disabled=""
              role="combobox"
-             tabindex="0"
            >
              <div
                class="rs-stack"
                style="align-items: center;"
              >
@@ -149,10 +152,11 @@
                  style="flex-grow: 1; overflow: hidden;"
                >
                  <input
                    aria-hidden="true"
                    class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
+                   disabled=""
                    readonly=""
                    style="pointer-events: none;"
                    tabindex="-1"
                    value=""
                  />"
`;

exports[`User Role Edit Panel should have Toggle sliders disabled with System Role 1`] = `
<DocumentFragment>
  <form
    class="css-1c13mle-Form eixcl8u0 rs-form rs-form-vertical rs-form-fluid"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.editUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="true"
          class="rs-btn rs-btn-primary rs-btn-disabled"
          data-testid="saveButton"
          disabled=""
          type="submit"
        >
          save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            disabled=""
            id="name"
            name="name"
            type="text"
            value="Role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            disabled=""
            id="description"
            name="userRoles.panels.description"
            type="text"
            value="Description for role 1"
          />
        </div>
      </div>
      <p>
        userRoles.panels.systemRole
      </p>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="permissions"
          id="permissions-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-disabled rs-picker-countable"
        >
          <div
            aria-disabled="true"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default rs-btn-disabled"
            disabled=""
            role="combobox"
          >
            <div
              class="rs-stack"
              style="align-items: center;"
            >
              <div
                class="rs-stack-item"
                style="flex-grow: 1; overflow: hidden;"
              >
                <input
                  aria-hidden="true"
                  class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
                  disabled=""
                  readonly=""
                  style="pointer-events: none;"
                  tabindex="-1"
                  value="permissionId1,permissionId2"
                />
                <span
                  class="rs-picker-toggle-value"
                >
                  <span
                    class="rs-picker-value-list"
                    title="permission description 1, permission description 2"
                  >
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 1
                    </span>
                    <span
                      class="rs-picker-value-separator"
                    >
                      ,
                    </span>
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 2
                    </span>
                  </span>
                  <span
                    class="rs-picker-value-count"
                    title="2"
                  >
                    2
                  </span>
                </span>
              </div>
              <div
                class="rs-stack-item"
              >
                <svg
                  aria-hidden="true"
                  aria-label="angle down"
                  class="rs-picker-toggle-caret rs-icon"
                  data-category="legacy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 21 32"
                  width="1em"
                >
                  <path
                    d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`User Role Edit Panel should render 1`] = `
<DocumentFragment>
  <form
    class="css-1c13mle-Form eixcl8u0 rs-form rs-form-vertical rs-form-fluid"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.createUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          create
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            id="name"
            name="name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            id="description"
            name="userRoles.panels.description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="permissions"
          id="permissions-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-cleanable rs-picker-block rs-picker-countable"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default"
            role="combobox"
            tabindex="0"
          >
            <div
              class="rs-stack"
              style="align-items: center;"
            >
              <div
                class="rs-stack-item"
                style="flex-grow: 1; overflow: hidden;"
              >
                <input
                  aria-hidden="true"
                  class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
                  readonly=""
                  style="pointer-events: none;"
                  tabindex="-1"
                  value=""
                />
                <span
                  aria-placeholder="Select"
                  class="rs-picker-toggle-placeholder"
                >
                  Select
                </span>
              </div>
              <div
                class="rs-stack-item"
              >
                <svg
                  aria-hidden="true"
                  aria-label="angle down"
                  class="rs-picker-toggle-caret rs-icon"
                  data-category="legacy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 21 32"
                  width="1em"
                >
                  <path
                    d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`User Role Edit Panel should render with role 1`] = `
<DocumentFragment>
  <form
    class="css-1c13mle-Form eixcl8u0 rs-form rs-form-vertical rs-form-fluid"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.editUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            id="name"
            name="name"
            type="text"
            value="Role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            id="description"
            name="userRoles.panels.description"
            type="text"
            value="Description for role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="permissions"
          id="permissions-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default"
            role="combobox"
            tabindex="0"
          >
            <div
              class="rs-stack"
              style="align-items: center;"
            >
              <div
                class="rs-stack-item"
                style="flex-grow: 1; overflow: hidden;"
              >
                <input
                  aria-hidden="true"
                  class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
                  readonly=""
                  style="pointer-events: none;"
                  tabindex="-1"
                  value="permissionId1,permissionId2,permissionId3,permissionId4"
                />
                <span
                  class="rs-picker-toggle-value"
                >
                  <span
                    class="rs-picker-value-list"
                    title="permission description 1, permission description 2, permission description 3, permission description 4"
                  >
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 1
                    </span>
                    <span
                      class="rs-picker-value-separator"
                    >
                      ,
                    </span>
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 2
                    </span>
                    <span
                      class="rs-picker-value-separator"
                    >
                      ,
                    </span>
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 3
                    </span>
                    <span
                      class="rs-picker-value-separator"
                    >
                      ,
                    </span>
                    <span
                      class="rs-picker-value-item"
                    >
                      permission description 4
                    </span>
                  </span>
                  <span
                    class="rs-picker-value-count"
                    title="4"
                  >
                    4
                  </span>
                </span>
              </div>
              <div
                class="rs-stack-item"
              >
                <span
                  aria-label="Clear"
                  class="rs-picker-toggle-clean rs-btn-close"
                  role="button"
                  tabindex="-1"
                  title="Clear"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="close"
                    class="rs-icon"
                    data-category="application"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`User Role Edit Panel will not render without correct permission 1`] = `
<DocumentFragment>
  <div
    class="rs-message rs-message-error rs-message-show rs-message-has-title rs-message-has-icon"
    role="alert"
  >
    <div
      class="rs-message-container"
    >
      <div
        class="rs-message-icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-label="close circle"
          class="rs-icon"
          data-category="legacy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M23.936 20.711c0-.363-.133-.672-.393-.937L19.769 16l3.771-3.769a1.28 1.28 0 00.393-.937c0-.377-.133-.695-.393-.958l-1.877-1.874a1.312 1.312 0 00-.962-.395c-.361 0-.67.133-.937.395l-3.765 3.769L12.23 8.46a1.293 1.293 0 00-.939-.395c-.375 0-.697.133-.958.395l-1.874 1.874a1.312 1.312 0 00-.395.958c0 .361.133.67.395.937L12.23 16l-3.771 3.771a1.278 1.278 0 00-.395.937c0 .375.133.695.395.96l1.874 1.874c.263.263.583.393.958.393.361 0 .672-.13.937-.393l3.771-3.771 3.769 3.771c.265.263.576.393.937.393.377 0 .697-.13.962-.393l1.877-1.874c.258-.265.391-.587.391-.958zM32 16c0 2.903-.715 5.579-2.144 8.03a15.931 15.931 0 01-5.822 5.826c-2.457 1.429-5.131 2.142-8.034 2.142s-5.579-.711-8.034-2.142a15.924 15.924 0 01-5.822-5.826C.715 21.58 0 18.903 0 16s.715-5.579 2.146-8.032 3.369-4.393 5.822-5.822S13.097.002 16 .002s5.577.715 8.034 2.146a15.928 15.928 0 015.822 5.822C31.282 10.42 32 13.097 32 16z"
          />
        </svg>
      </div>
      <div
        class="rs-message-content"
      >
        <div
          class="rs-message-header"
        >
          permissions.noAccess
        </div>
        <div
          class="rs-message-body"
        >
          permissions.contactAdmin
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
